[package]
name = "pw_gen"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
figlet-rs = "0.1.4"
log = "0.4.17"
rand = "0.8.5"
simple_logger = "4.0.0"
